Add router docset to hp

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -58,6 +58,11 @@ Apollo is a platform for building a unified graph, a communication layer that he
     path="/federation"
     cta="Get familiar with %s"
   />
+  <Docset
+    title="Router (alpha)"
+    description="A configurable, high-performance graph router for a federated graph."
+    path="/router"
+  />
 </DocsetGrid>
 
 ## Cloud
