Remove unused id prop

--- a/src/content/studio/explorer/explorer.mdx
+++ b/src/content/studio/explorer/explorer.mdx
@@ -23,7 +23,7 @@ When you execute your first query, the Explorer prompts you for the URL of your 
 
 Here's an example embedded Explorer you use to try out the query-building features described below:
 
-<EmbeddableExplorer id="embedded-explorer-2" />
+<EmbeddableExplorer />
 
 ### The operation editor
 
