--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -6,7 +6,7 @@ If you have a [public variant](../org/graphs/#public-variants) of your graph, yo
 
 For example, here's an embedded Explorer for an Apollo example graph. Try it out!
 
-<EmbeddableExplorer id="embedded-explorer-1" />
+<EmbeddableExplorer />
 
 > This embedded Explorer collapses its left column by default because the full three-column layout is a little cramped on this page. You can [customize the embedded Explorer's appearance](#options) to suit the page it's on.
 
