Only hide the table of contents on the docs homepage

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Apollo Docs Home
 description: Explore the Apollo platform
+toc: false
 ---
 
 import {ButtonGroup, VStack} from '@chakra-ui/react';
