Update studio docs

--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -97,7 +97,10 @@ These are the top-level fields you can include in the options object you pass to
 
 <thead>
   <tr>
-    <th>Name /<br/>Type</th>
+    <th>
+      Name /<br />
+      Type
+    </th>
     <th>Description</th>
   </tr>
 </thead>
