--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -8,7 +8,7 @@ import RegisterFederatedCli from '../shared/register-federated-cli.mdx';
 
 Hello! This article gets you up and running with Apollo Studio. None of this setup requires a paid plan.
 
-You can use Studio with any GraphQL server. Certain features (such as [metrics reporting](./metrics/usage-reporting/)) are currently best supported by [Apollo Server](https://www.apollographql.com/docs/apollo-server/).
+You can use Studio with any GraphQL server. Certain features (such as [metrics reporting](./metrics/usage-reporting/)) are currently best supported by [Apollo Server](/apollo-server/).
 
 ## 1. Create your account
 
