--- a/src/content/studio/schema-checks-apollo-cli.mdx
+++ b/src/content/studio/schema-checks-apollo-cli.mdx
@@ -107,7 +107,7 @@ You can also rerun checks from inside Studio. When you rerun a check, the latest
 
 ### Checking a federated schema
 
-If your graph uses [Apollo Federation](/federation/), the schema checks process differs slightly. For details, see [Checking changes to a federated graph](https://www.apollographql.com/docs/federation/managed-federation/advanced-topics/#checking-changes-to-a-federated-graph).
+If your graph uses [Apollo Federation](/federation/), the schema checks process differs slightly. For details, see [Checking changes to a federated graph](/federation/managed-federation/federated-schema-checks).
 
 ## Using with continuous integration
 
