--- a/src/content/studio/schema/schema-reporting.mdx
+++ b/src/content/studio/schema/schema-reporting.mdx
@@ -20,7 +20,7 @@ Schema reporting is available in Apollo Server version 2.15 and later. To enable
 
    If you're using the [`dotenv`](https://www.npmjs.com/package/dotenv) library, you can add these definitions to the `.env` file in your project's root directory, like so:
 
-   ```bash{1-2}:title=.env
+   ```bash {1-2} title=".env"
    APOLLO_KEY=YOUR_KEY_HERE
    APOLLO_GRAPH_ID=your-graph-id
    APOLLO_SCHEMA_REPORTING=true
