--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -15,29 +15,28 @@ import {
 import {DOCSET_ICONS} from '../../components/DocsetMenu';
 import {SiDiscourse, SiGithub, SiTwitter, SiYoutube} from 'react-icons/si';
 
-Apollo is a platform for building a unified graph, a communication layer that helps you manage the flow of data between your application clients (such as web and native apps) and your back-end services. At the heart of the graph is a query language called GraphQL.
+Apollo is a platform for building a unified **graph**, a communication layer that helps you manage the flow of data between your application clients (such as web and native apps) and your backend services. At the heart of the graph is a query language called **GraphQL**.
 
 <Odyssey />
 
-## Client
+## Apollo Client
+
+Execute GraphQL operations, cache their results, and manage your application's state with one powerful library.
 
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.react}
     title="React"
-    description="Manage your React app's state and seamlessly execute GraphQL operations."
     path="/react"
   />
   <Docset
     icon={DOCSET_ICONS.ios}
     title="iOS"
-    description="Manage your iOS app's state and seamlessly execute GraphQL operations."
     path="/ios"
   />
   <Docset
     icon={DOCSET_ICONS.android}
     title="Kotlin"
-    description="Manage your Kotlin app's state and seamlessly execute GraphQL operations."
     path="/kotlin"
   />
 </DocsetGrid>
@@ -50,14 +49,13 @@ Apollo is a platform for building a unified graph, a communication layer that he
     title="Apollo Server"
     description="Configure a production-ready GraphQL server to fetch and combine data from multiple sources."
     path="/apollo-server"
-    cta={CTA_LEARN}
   />
   <Docset
     icon={DOCSET_ICONS.federation}
     title="Federation"
     description="Implement a single unified graph across multiple subgraphs."
     path="/federation"
-    cta="Get familiar with %s"
+    cta={CTA_LEARN}
   />
   <Docset
     title="Router (alpha)"
@@ -78,10 +76,9 @@ Apollo is a platform for building a unified graph, a communication layer that he
   />
   <Docset
     icon={DOCSET_ICONS.rover}
-    title="Rover"
+    title="Rover CLI"
     description="Manage your Studio graphs and schemas from the command line."
     path="/rover"
-    cta={CTA_LEARN}
   />
 </DocsetGrid>
 
@@ -89,7 +86,7 @@ Apollo is a platform for building a unified graph, a communication layer that he
 
 ### Join our community 💬
 
-We love hearing from you! Here are a few ways in which you can contribute at any time you'd like.
+We love hearing from you! Here are a few ways you can connect with us and other Apollo community members.
 
 <ButtonGroup variant="ghost">
   <CommunityButton
