Make docset description optional

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -24,21 +24,9 @@ Apollo is a platform for building a unified **graph**, a communication layer tha
 Execute GraphQL operations, cache their results, and manage your application's state with one powerful library.
 
 <DocsetGrid>
-  <Docset
-    icon={DOCSET_ICONS.react}
-    title="React"
-    path="/react"
-  />
-  <Docset
-    icon={DOCSET_ICONS.ios}
-    title="iOS"
-    path="/ios"
-  />
-  <Docset
-    icon={DOCSET_ICONS.android}
-    title="Kotlin"
-    path="/kotlin"
-  />
+  <Docset icon={DOCSET_ICONS.react} title="React" path="/react" />
+  <Docset icon={DOCSET_ICONS.ios} title="iOS" path="/ios" />
+  <Docset icon={DOCSET_ICONS.android} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
 
 ## Backend
