--- a/src/content/studio/explorer/explorer.mdx
+++ b/src/content/studio/explorer/explorer.mdx
@@ -21,7 +21,7 @@ When you execute your first query, the Explorer prompts you for the URL of your 
 
 ## Building a query
 
-Here's an example embedded Explorer you use to try out the query-building features described below:
+Here's an example [embedded Explorer](./embed-explorer/) you use to try out the query-building features described below:
 
 <EmbeddableExplorer />
 
