--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -1,9 +1,13 @@
 ---
 title: Apollo Sandbox
-description: Use the Explorer with any GraphQL server
+description: Use Studio features without an Apollo account
 ---
 
-**Apollo Sandbox** is a special instance of the [Explorer](./explorer/) that doesn't require an Apollo account. Sandbox doesn't support certain Explorer features like schema history, but it's great for local development.
+**Apollo Sandbox** is a special mode of Apollo Studio that doesn't require an Apollo account. It provides a subset of Studio features that are great for local development, including:
+
+* [The Explorer](./explorer/)
+* Schema reference
+* [Schema checks](../schema-checks/) and diffs against registered graphs (for logged-in users)
 
 <Button
   size="lg"
@@ -11,25 +15,22 @@ description: Use the Explorer with any GraphQL server
   as="a"
   target="_blank"
   rel="noopener noreferrer"
-  to="https://studio.apollographql.com/sandbox/"
+  href="https://studio.apollographql.com/sandbox/"
 >
   Launch Sandbox
 </Button>
 
-Sandbox automatically attempts to connect to a GraphQL server running at `http://localhost:4000`. You can use the box at the top of Sandbox to change this URL to any local or remote GraphQL endpoint that's accessible by your browser:
-
-<img
-  className="screenshot"
-  src="../img/sandbox-url.jpg"
-  alt="Sandbox URL field"
-  width="300"
-/>
-
-> To try out Sandbox with an example GraphQL API, you can set its URL to `https://swapi-graphql.netlify.app/.netlify/functions/index`.
-
 ## Overview video
 
 <YouTube youTubeId="0jzqqHZU00Q" />
+
+## Connecting to a GraphQL server
+
+When you open Sandbox, it automatically attempts to connect to a GraphQL server running at `http://localhost:4000`. You can use the box at the top of the Explorer to change this URL to any local or remote GraphQL endpoint that's accessible by your browser:
+
+<img class="screenshot" src="../img/sandbox-url.jpg" alt="Sandbox URL field" width="300" />
+
+> To try out Sandbox with an example GraphQL API, you can set the URL to `https://swapi-graphql.netlify.app/.netlify/functions/index`.
 
 ## Publishing schemas from Sandbox
 
@@ -37,20 +38,15 @@ Sandbox automatically attempts to connect to a GraphQL server running at `http:/
 
 If you're signed in to Sandbox with your Apollo account, you can publish your GraphQL server's schema to any Studio graph and variant you have the necessary permissions for.
 
-To do so, first click **Publish** at the top of Sandbox:
+To do so, first click **Publish** at the top of the Explorer:
 
-<img
-  className="screenshot"
-  src="../img/sandbox-publish.jpg"
-  alt="Publishing schemas to Studio from Sandbox"
-  width="600"
-/>
+<img class="screenshot" src="../img/sandbox-publish.jpg" alt="Publishing schemas to Studio from Sandbox" width="600" />
 
 Then use the dropdown to select _where_ in Studio to publish your schema. You can publish to any of the following:
 
-- An entirely new graph
-- A new variant of an existing graph
-- An existing variant of an existing graph
+* An entirely new graph
+* A new variant of an existing graph
+* An existing variant of an existing graph
 
 After you select an option, a dialog appears that enables you to select or create a graph and variant to publish to. After you make your selections, click **Confirm** to publish.
 
@@ -66,39 +62,25 @@ Apollo Sandbox provides schema diffs and checks to help you validate changes to 
 
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Schema Diff** page from the left navigation panel. Then use the dropdown menus to select any accessible organization, graph, and variant to compare against:
 
-<img
-  className="screenshot"
-  src="../img/sandbox-diff.jpg"
-  alt="Schema diff in Sandbox"
-/>
+<img class="screenshot" src="../img/sandbox-diff.jpg" alt="Schema diff in Sandbox" />
 
-> If you're using Sandbox with a subgraph, this diff shows the schema as originally defined, not the generated subgraph schema that includes federation-specific fields like Query.\_entities. You can view the generated subgraph schema from the SDL page in Sandbox.
+> If you're using Sandbox with a subgraph, this diff shows the schema as originally defined, not the generated subgraph schema that includes federation-specific fields like Query._entities. You can view the generated subgraph schema from the SDL page in Sandbox.
 
 In addition to viewing the diff on this page, you can click **Run a Check** in the upper-right to run [schema checks](#schema-checks) against the currently selected variant.
 
 ### Schema checks
 
-> [Schema checks](../schema-checks/) require both a [paid Studio plan](https://www.apollographql.com/pricing/) and [usage reporting data](../metrics/usage-reporting/) from your GraphQL server.
+> [Schema checks](../schema-checks/) require both a [paid Studio plan](https://www.apollographql.com/pricing/) and [usage reporting data](/metrics/usage-reporting/) from your GraphQL server.
 >
 > Organization members with the [`Consumer` role](../org/members/#organization-wide-member-roles) cannot run schema checks.
 
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** page from the left navigation panel:
 
-<img
-  className="screenshot"
-  src="../img/sandbox-checks-select.jpg"
-  alt="Sandbox select variant for checks"
-  width="400"
-/>
+<img class="screenshot" src="../img/sandbox-checks-select.jpg" alt="Sandbox select variant for checks" width="400" />
 
 Select any accessible organization, graph, and variant to check against and click **Run a check**. When the check completes, Sandbox displays a result summary:
 
-<img
-  className="screenshot"
-  src="../img/sandbox-checks-result.jpg"
-  alt="Sandbox checks result"
-  width="400"
-/>
+<img class="screenshot" src="../img/sandbox-checks-result.jpg" alt="Sandbox checks result" width="400" />
 
 To view the result's _full_ details in Studio, click **Go to details**.
 
@@ -106,21 +88,11 @@ To view the result's _full_ details in Studio, click **Go to details**.
 
 You can run subgraph checks on federated graphs. If you're using Sandbox with a subgraph, you can use the subgraph dropdown to select which subgraph you want to check your changes against.
 
-<img
-  class="screenshot"
-  src="../img/subgraph-sandbox-check-prompt.jpg"
-  alt="Sandbox subgraph check prompt"
-  width="500"
-/>
+<img class="screenshot" src="../img/subgraph-sandbox-check-prompt.jpg" alt="Sandbox subgraph check prompt" width="500" />
 
 When you click **Run a check**, Studio first performs a composition check using your local subgraph schema and the registered schemas of your other subgraphs. If composition succeeds, Sandbox then performs operation checks as usual and displays the results of all checks. If composition fails, Sandbox does not perform operation checks and displays the composition error.
 
-<img
-  class="screenshot"
-  src="../img/subgraph-sandbox-one-check-failed.jpg"
-  alt="Sandbox subgraph check result"
-  width="500"
-/>
+<img class="screenshot" src="../img/subgraph-sandbox-one-check-failed.jpg" alt="Sandbox subgraph check result" width="500" />
 
 ## Offline Sandbox
 
@@ -131,3 +103,7 @@ You can use Sandbox _without_ an internet connection if you're querying a graph 
 Sandbox automatically reconnects to Apollo Studio whenever your internet connection is restored. When it does, it might display a notification that your Apollo Studio application version is stale by at least 24 hours. You can click the notification to update _all_ of your browser's open Apollo Studio tabs to the latest version.
 
 > This notification indicates only that the Apollo Studio _UI_ is out of date. Your Studio _data_ is always kept up to date.
+
+## Operation collections in Sandbox
+
+See [this section](./operation-collections/#sandbox-collections).
