--- a/src/content/studio/explorer/operation-collections.mdx
+++ b/src/content/studio/explorer/operation-collections.mdx
@@ -3,11 +3,11 @@ title: Operation collections in the Explorer
 description: Save and share frequently used GraphQL operations
 ---
 
-You can save **operation collections** in the Apollo Studio Explorer, enabling you to organize your frequently used GraphQL operations and optionally share them with your team:
+You can create **operation collections** in the Apollo Studio Explorer, enabling you to save, organize, and share your organization's frequently used GraphQL operations:
 
 <img src="../img/operation-collections/list-collections.jpg" alt="Explorer collections list" class="screenshot" width="300" />
 
-Each [variant](../org/graphs/#managing-variants) of a graph has its own set of operation collections. An operation collection can be either **personal** (visible only to you) or **shared** (visible to authorized organization members).
+Each [variant](../org/graphs/#managing-variants) of a graph has its own set of operation collections. An operation collection can be either **personal** (visible only to you) or **shared** (visible to all organization members who can view the corresponding variant).
 
 **Operation collections help you and your team:**
 
@@ -60,9 +60,9 @@ To add operations to a collection:
 
 That's it! Your newly saved entry appears in its corresponding collection:
 
-<img src="../img/operation-collections/added-operation.jpg" alt="Saved operation shown in left panel" class="screenshot" width="500" />
+<img src="../img/operation-collections/added-operation.jpg" alt="Saved operation shown in left panel" class="screenshot" width="350" />
 
-If you've saved the entry to a shared collection, it also appears for other members of your organization.
+If you've saved the entry to a shared collection, it also appears for other authorized members of your organization.
 
 > After you add multiple operations to a collection, you can **drag and drop** to reorder them within the collection.
 
