Add Documenter user role in 2 relevant places

--- a/src/content/studio/org/graphs.mdx
+++ b/src/content/studio/org/graphs.mdx
@@ -47,7 +47,7 @@ When a user opens one of your graph's variants in Apollo Studio, its **README pa
 
 Like the typical homepage for a Git repository, this page displays a Markdown-based README that you can edit with any content you like.
 
-> **Note:** Only organization members with the [`Org Admin`, `Graph Admin`, or `Contributor` role](./members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), `Contributor`s _cannot_ edit its README.
+> **Note:** Only organization members with the [`Org Admin`, `Graph Admin`, `Contributor`, or `Documenter` role](./members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), `Contributor`s _cannot_ edit its README.
 
 **Each variant has its own README.** If you edit one variant's README, those edits are _not_ applied to other variants. Among other uses, this enables you to provide different information to external consumers in a [public variant](#public-variants).
 
