update docs for explorer.prompt to reflect accepting messages in markdown

--- a/src/content/studio/explorer/connecting-authenticating.mdx
+++ b/src/content/studio/explorer/connecting-authenticating.mdx
@@ -193,7 +193,7 @@ Function for making HTTP requests to external services from within a preflight s
 </td>
 <td>
 
-Function that prompts the user for input and returns the value in a promise. If the user cancels the prompt, the promise resolves to `null`.
+Prompt the user for input and returns the value in a promise. If the user cancels the prompt, the promise resolves to `null`. `msg` can include markdown.
 
 </td>
 </tr>
