--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -46,6 +46,7 @@ Execute GraphQL operations, cache their results, and manage your application's s
     cta={CTA_LEARN}
   />
   <Docset
+    icon={DOCSET_ICONS.router}
     title="Router (alpha)"
     description="A configurable, high-performance graph router for a federated graph."
     path="/router"
