--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -62,7 +62,7 @@ Set your graph API key as the value of the `APOLLO_KEY` environment variable in 
 
 If you're using the [`dotenv`](https://www.npmjs.com/package/dotenv) library, you can add these definitions to the `.env` file in your project's root directory, like so:
 
-```bash{1-2}:title=.env
+```bash {1-2} title=".env"
 APOLLO_KEY=YOUR_KEY_HERE
 APOLLO_SCHEMA_REPORTING=true
 APOLLO_GRAPH_ID=your-graph-id
