--- a/src/content/studio/schema/schema-reporting.mdx
+++ b/src/content/studio/schema/schema-reporting.mdx
@@ -38,7 +38,7 @@ Your server can register its schema to a particular [variant of your graph](../o
 
 To do so with Apollo Server, set the `APOLLO_GRAPH_VARIANT` environment variable in each server environment:
 
-```none:title=.env
+```none title=".env"
 APOLLO_KEY=YOUR_KEY_HERE
 APOLLO_GRAPH_ID=your-graph-id
 APOLLO_GRAPH_VARIANT=staging
