--- a/src/content/studio/validating-client-operations.mdx
+++ b/src/content/studio/validating-client-operations.mdx
@@ -44,7 +44,7 @@ Your application can incorporate `client:check` into its continuous delivery pip
 
 Here's a Circle CI configuration excerpt that incorporates the command:
 
-```yaml{30}:title=config.yml
+```yaml {30} title="config.yml"
 version: 2
 
 jobs:
