--- a/src/content/studio/schema-checks-apollo-cli.mdx
+++ b/src/content/studio/schema-checks-apollo-cli.mdx
@@ -119,7 +119,7 @@ We recommend defining a separate CI job for each [variant of your schema](./chec
 
 The following config defines a schema check job for a CircleCI pipeline. Your config's syntax varies depending on your CI tool, but the job's steps are the same.
 
-```yaml{30}:title=config.yml
+```yaml {30} title="config.yml"
 version: 2
 
 jobs:
