--- a/src/content/studio/explorer/connecting-authenticating.mdx
+++ b/src/content/studio/explorer/connecting-authenticating.mdx
@@ -193,7 +193,9 @@ Function for making HTTP requests to external services from within a preflight s
 </td>
 <td>
 
-Prompt the user for input and returns the value in a promise. If the user cancels the prompt, the promise resolves to `null`. `msg` can include markdown.
+Function that [rompt the user for input and returns the value in a promise. If the user cancels the prompt, the promise resolves to `null`.  
+
+The prompt supports Markdown rendering of the msg parameter.  
 
 </td>
 </tr>
