--- a/src/content/studio/explorer/connecting-authenticating.mdx
+++ b/src/content/studio/explorer/connecting-authenticating.mdx
@@ -195,7 +195,7 @@ Function for making HTTP requests to external services from within a preflight s
 
 Function that [rompt the user for input and returns the value in a promise. If the user cancels the prompt, the promise resolves to `null`.  
 
-The prompt supports Markdown rendering of the msg parameter.  
+The prompt supports Markdown rendering of the `msg` parameter.  
 
 </td>
 </tr>
