--- a/src/content/studio/sub-processors.mdx
+++ b/src/content/studio/sub-processors.mdx
@@ -26,18 +26,11 @@ By subscribing to receive updates about this page, you will be notified by email
 
 ## How to subscribe to updates
 
-Current Apollo customers must subscribe to receive email notification of updates to Sub-processors and by submitting (1) the email address for such notifications and (2) the full name of the legal entity that has signed the Agreement with Apollo. By submitting this information, you represent that you are an Apollo customer and have all necessary rights to provide this information to Apollo.
-
-<Button
-  size="lg"
-  colorScheme="indigo"
-  as="a"
-  target="_blank"
-  rel="noopener noreferrer"
-  href="http://eepurl.com/hsDQCr"
+> ⚠️ **Subscribing to Sub-processor updates is temporarily disabled as we migrate our communication list.** This article remains the canonical location for Apollo Sub-processor details.
 >
-  Subscribe
-</Button>
+> [View this article's edit history.](https://github.com/apollographql/docs/commits/main/src/content/studio/sub-processors.mdx)
+
+Current Apollo customers must subscribe to receive email notification of updates to Sub-processors and by submitting (1) the email address for such notifications and (2) the full name of the legal entity that has signed the Agreement with Apollo. By submitting this information, you represent that you are an Apollo customer and have all necessary rights to provide this information to Apollo.
 
 ## How to object to a new Sub-processor
 
