Remove operation safelisting content

--- a/src/content/studio/org/graphs.mdx
+++ b/src/content/studio/org/graphs.mdx
@@ -108,7 +108,7 @@ The Schema > Changelog tab in Apollo Studio displays a timeline of changes made 
 
 ## Managing variants
 
-To distinguish between instances of the same graph running in different environments (such as staging and production), you can define **variants** for a deployed graph. Each variant has its own schema, along with its own change history, metrics, and operation registry:
+To distinguish between instances of the same graph running in different environments (such as staging and production), you can define **variants** for a deployed graph. Each variant has its own schema, along with its own change history and metrics:
 
 <img
   src="../img/graph-variants.jpg"
