--- a/src/content/studio/schema-checks.mdx
+++ b/src/content/studio/schema-checks.mdx
@@ -161,7 +161,7 @@ In addition to the arguments required by `graph check`, `subgraph check` require
 
 > To obtain your running subgraph's schema via introspection, use `subgraph introspect` instead of `graph introspect`. This preserves federation-specific directives that are required for composition.
 
-When you run `subgraph check`, Apollo Studio performs a **composition check** before it performs operation checks. A composition check verifies that changes you make to a subgraph schema are compatible with your _other_ subgraph schemas, enabling them to compose into a _supergraph_ schema ([learn more](/federation/quickstart/#federation-concepts)).
+When you run `subgraph check`, Apollo Studio performs a **composition check** before it performs operation checks. A composition check verifies that changes you make to a subgraph schema are compatible with your _other_ subgraph schemas, enabling them to compose into a _supergraph_ schema ([learn more](/federation/federated-types/composition/)).
 
 > If a composition check fails, Studio does _not_ then perform operation checks for the provided schema.
 
