--- a/src/content/shared/obtain-graph-api-key.mdx
+++ b/src/content/shared/obtain-graph-api-key.mdx
@@ -6,7 +6,7 @@
 
 1. Go to [studio.apollographql.com](https://studio.apollographql.com/) and click the graph you want to obtain an API key for.
 
-2. **If a "Publish your Schema" dialog appears**, select the **From Apollo Server** tab. Copy the value that appears after `APOLLO_KEY=` in the instructions (it begins with `service:`), and you're all set.
+2. **If a "Publish your Schema" dialog appears**, copy the protected value that appears after `APOLLO_KEY=` in the example code block (it begins with `service:`), and you're all set.
 
    **Otherwise**, proceed to the next step.
 
