--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -36,21 +36,19 @@ When you open Sandbox, it automatically attempts to connect to a GraphQL server 
 
 > ⚠️ Sandbox does not yet support publishing subgraph schemas to Studio for a [federated graph](https://www.apollographql.com/docs/federation/).
 
-If you're signed in to Sandbox with your Apollo account, you can publish your GraphQL server's schema to any Studio graph and variant you have the necessary permissions for.
+If you're signed in to Sandbox with your Apollo account, you can publish your GraphQL server's schema to a new Studio graph.
 
-To do so, first click **Publish** at the top of the Explorer:
+To do so, first click **Publish** at the top of the Explorer. The following dialog appears:
 
-<img class="screenshot" src="../img/sandbox-publish.jpg" alt="Publishing schemas to Studio from Sandbox" width="600" />
+<img class="screenshot" src="../img/sandbox-publish.jpg" alt="Publishing schemas to Studio from Sandbox" width="400" />
 
-Then use the dropdown to select _where_ in Studio to publish your schema. You can publish to any of the following:
+1. Use the dropdown menu to choose an organization for your new graph.
+2. Provide a title for your graph.
+3. If you've created any [Sandbox operation collections](./operation-collections/#sandbox-collections), you can copy those over to your new graph by checking the box.
+    * This option doesn't appear if you haven't created any Sandbox collections.
+4. Click **Confirm**.
 
-* An entirely new graph
-* A new variant of an existing graph
-* An existing variant of an existing graph
-
-After you select an option, a dialog appears that enables you to select or create a graph and variant to publish to. After you make your selections, click **Confirm** to publish.
-
-When Sandbox finishes publishing your schema, it redirects you to your selected variant in Studio.
+When Sandbox finishes publishing your schema, it redirects you to your new graph in Studio.
 
 ## In-Sandbox schema diffs and checks
 
