Fix incorrect link on docs homepage

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -60,7 +60,7 @@ Execute GraphQL operations, cache their results, and manage your application's s
     icon={DOCSET_ICONS.studio}
     title="Studio"
     description="Build your graph with your team, evolve it safely, and keep it running smoothly."
-    path="/react"
+    path="/studio"
     cta={CTA_LEARN}
   />
   <Docset
