--- a/src/content/studio/contracts.mdx
+++ b/src/content/studio/contracts.mdx
@@ -339,4 +339,4 @@ Whenever Apollo Studio attempts to create or update your contract schema, it mig
 
 - Tags on objects and interface types (including tags on extension types) are inherited by all fields of that type.
 
-- Tagging interface _fields_ in [Federation 1](https://www.apollographql.com/docs/federation/v1/) is not supported. You can still make an interface field inaccessible by tagging the interface definition, or by ensuring that object fields that implement the interface field are removed.
+- Tagging interface _fields_ in [Federation 1](/federation/v1/) is not supported. You can still make an interface field inaccessible by tagging the interface definition, or by ensuring that object fields that implement the interface field are removed.
